Add clear button Add dual calendar option (shows two months at a time when using single picker) Hide custom ranges, but keep clear and now buttons Change min/max year to -10/+10 Refactor update element method

--- a/daterangepicker.css
+++ b/daterangepicker.css
@@ -165,6 +165,7 @@
     text-align: center;
     margin: 5px auto;
     line-height: 30px;
+    min-height: 30px;
     position: relative;
     padding-left: 28px; }
     .daterangepicker .calendar-time select.disabled {
